// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authors can be created/edited/deleted: can be created 1`] = `
{
  "data": {
    "createAuthor": {
      "bio": [
        {
          "children": [
            {
              "text": "Author Bio Heading",
            },
          ],
          "type": "heading-one",
        },
        {
          "children": [
            {
              "text": "author bio text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "id": Any<String>,
      "image": null,
      "links": [
        {
          "title": "link 1",
          "url": "www.link1.ch",
        },
        {
          "title": "link 2",
          "url": "www.link2.ch",
        },
      ],
      "name": "John Grisham",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be deleted 1`] = `
{
  "data": {
    "deleteAuthor": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be read by id 1`] = `
{
  "data": {
    "author": {
      "bio": [
        {
          "children": [
            {
              "text": "Author Bio Heading",
            },
          ],
          "type": "heading-one",
        },
        {
          "children": [
            {
              "text": "author bio text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "id": Any<String>,
      "image": null,
      "links": [
        {
          "title": "link 1",
          "url": "www.link1.ch",
        },
        {
          "title": "link 2",
          "url": "www.link2.ch",
        },
      ],
      "name": "John Grisham",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be updated 1`] = `
{
  "data": {
    "updateAuthor": {
      "bio": [
        {
          "children": [
            {
              "text": "Author Bio Heading",
            },
          ],
          "type": "heading-one",
        },
        {
          "children": [
            {
              "text": "author bio text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "id": Any<String>,
      "image": null,
      "links": [
        {
          "title": "homepage",
          "url": "www.j-a.com",
        },
      ],
      "name": "Jane Austen",
      "slug": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
